Select: fix #1613 (wrap long values)

--- a/src/components/Select/Select.css
+++ b/src/components/Select/Select.css
@@ -36,6 +36,7 @@
   position: relative;
   z-index: 2;
   cursor: pointer;
+  overflow: hidden;
 }
 
 .Select:not(.Select--multiline) .Select__title {
